Bug 144763 tolerate do_QueryReferent() returning null [@nsXULPrototypeScript::Compile] r=harishd sr=jst